apps/sroom-prt01-scanner/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sroom-prt01-scanner
  labels:
    gateway-access: sroom-prt01-scanner
