apps/sroom-prt01-scanner/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sroom-prt01-scanner
  namespace: sroom-prt01-scanner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sroom-prt01-scanner
  template:
    metadata:
      labels:
        app: sroom-prt01-scanner 
    spec:
      nodeSelector:
        affected_vlan: "60"
      hostNetwork: true
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: sroom-prt01-scanner
          image: ghcr.io/philippmundhenk/brotherscannerdocker:v1.1.1@sha256:d60f5ca09119e87f24a926b07d07cb0ee4ac1c555a7e210758796fd913bd0495
          imagePullPolicy: Always
          ports:
            - containerPort: 33555
            - containerPort: 54925
              protocol: UDP
              name: scanner-udp
            - containerPort: 54921
              protocol: TCP
              name: scanner-tcp
            - containerPort: 161
              protocol: UDP
              name: snmp-udp
