apps/sroom-prt01-scanner/service-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: sroom-prt01-scanner-lb
  namespace: sroom-prt01-scannerlabels:
    app: sroom-prt01-scanner
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - name: scanner-udp
    port: 54925
    targetPort: scanner-udp
    protocol: UDP
  - name: scanner-tcp
    port: 54921
    targetPort: scanner-tcp
    protocol: TCP
  - name: snmp-udp
    port: 161
    targetPort: snmp-udp
    protocol: UDP
  selector:
    app: sroom-prt01-scanner
