apps/sroom-prt01-scanner/sroom-prt01-60-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sroom-prt016-60-service
  namespace: sroom-prt01-scanner
  annotations:
    k3s.io/cloud-provider: "external"
  labels:
    app: sroom-prt01-scanner
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
  - name: scanner-udp
    port: 54925
    targetPort: scanner-udp
    protocol: UDP
  - name: scanner-tcp
    port: 54921
    targetPort: scanner-tcp
    protocol: TCP
  - name: snmp-udp
    port: 161
    targetPort: snmp-udp
    protocol: UDP
  selector:
    app: sroom-prt01-scanner
